# sop2022-23_26c

./: .gitignore
s26974-MalgorzataCiesielska/: pamietnik.txt
s26974-MalgorzataCiesielska/zajecia4/: dom1.c  dom2.c  zad1_1.c  zad1_3.c  zad_IO1.c  zad_wsk.c
s26974-MalgorzataCiesielska/zajecia5/: dom.c  zad6.c
s27085-KonradFijalkowski/: pamietnik.txt
s27085-KonradFijalkowski/zajecia5/: Makefile  makefile  zad1  zad1.c  zad2  zad2.c  zad3  zad3.c  zad4  zad4.c  zad5  zad5.c  zadDom  zadDom.c
s27274-PatrykOlbrys/: pamietnik.txt
s27274-PatrykOlbrys/zajecia5/: zad1.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad_domowe.c
s27274-PatrykOlbrys/zajecia6/: zad1.c  zad2.c
s27288-MateuszLisewski/: pamietnik.txt
s27288-MateuszLisewski/zajecia4/: Zad_1_2.c  Zad_1_3.c  Zad_2_OI_1_1.c  Zad_2_OI_1_2.c  Zad_2_OI_2.c  Zad_2_OI_data.txt  Zad_3_F.c  Zad_Dom_1.c  Zad_Dom_2.c  Zad_Dom_3_Ite.c  Zad_Dom_3_Rec.c
s27288-MateuszLisewski/zajecia5/: Zad_1.c  Zad_2.c  Zad_3.c  Zad_4.c  Zad_5.c  Zad_6.c  Zad_Dom.c
s27288-MateuszLisewski/zajecia6/: Zad_Dom_HTTP.c  Zad_SIG_1.c  Zad_SIG_2.c
s27447ŁukaszOgorzałek/zajecia4/: zadDom1.c  zadDom2.c
s27447ŁukaszOgorzałek/zajecia5/: zad6.c  zadDomowe.c
s27447ŁukaszOgorzałek/zajecia6/: zad1A.c  zad1B.c
s28840-NikodemRabulinski/: flake.nix  formatter.sh  pamietnik.txt
s28840-NikodemRabulinski/zajecia5/: zadanie6.c
s28840-NikodemRabulinski/zajecia6/: meson.build
s28840-NikodemRabulinski/zajecia6/zadaniedom/: common.h  handler.c  handler.h  main.c
s29608-DawidFrontczak/: pamietnik.txt
s29608-DawidFrontczak/zajecia2/: zadanie1.txt
(+71 files in other folders)
